--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,1 +1,1 @@
-<%- include("partials/Header") %> <%- body %> <%- include("partials/footer") %>
+<%- include("partials/header") %> <%- body %> <%- include("partials/footer") %>
