--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%= locals.error %> <%- include("partials/Header") %>
+<%= locals.error %> <%- include("partials/header") %>
 
 <body>
   <div class="container-scroller">
