error collecting in routes

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/Header") %>
+<%- include("partials/header") %>
 <body>
   <div class="container-scroller">
     <%- include("partials/nav") %>
