--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,25 +1,34 @@
-
+<br>
+<br>
 <p class="footer-text text-center ">
-  copyright © 2020 Bootstrapdash. All rights reserved.
+  copyright © 2020 softport. All rights reserved.
 </p>
-<p class="footer-text text-center text-center">
+<p style="gap: 12px;" class="footer-text d-flex justify-content-center mb-4">
   <a
-    href="https://www.bootstrapdash.com/bootstrap-admin-template/"
+    href="#"
     target="_blank"
   >
-    Free Bootstrap template
+  twitter
   </a>
-  from BootstrapDash templates 
+  <a
+    href="#"
+    target="_blank"
+  >
+  facebook
+  </a>
+  <a
+    href="#"
+    target="_blank"
+  >
+  blog
+  </a>
+  follow us on social media 
 </p>
 </div>
 </div>
 </div>
-<!-- content-wrapper ends -->
 </div>
-<!-- page-body-wrapper ends -->
 </div>
-<!-- container-scroller -->
-<!-- plugins:js -->
 <script src="/assets/vendors/js/vendor.bundle.base.js"></script>
 <script src="/assets/vendors/js/vendor.bundle.addons.js"></script>
 
