--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,44 +8,30 @@
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-center">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item font-weight-semibold d-none d-lg-block">
+      <li class="nav-item font-weight-semibold d-none d-sm-block">
         <a href="/">home</a>
       </li>
-      <li class="nav-item font-weight-semibold d-none d-lg-block">
+      <li class="nav-item font-weight-semibold d-none d-sm-block">
         <a href="#about">about</a>
       </li>
-      <li class="nav-item font-weight-semibold d-none d-lg-block">
+      <li class="nav-item font-weight-semibold d-none d-sm-block">
         <a href="#contact">contacts</a>
       </li>
 
-      <li class="nav-item font-weight-semibold d-none d-lg-block">
+      <li class="nav-item font-weight-semibold d-none d-sm-block">
         <a href="/dashboard">dashboard</a>
       </li>
-      <li class="nav-item font-weight-semibold d-none d-lg-block">
+      <li class="nav-item font-weight-semibold d-none d-sm-block">
         <a href="/profile">profile</a>
       </li>
     </ul>
-    <form
-      class="forms-sample d-flex ml-2"
-      action="/portfolio/search"
-      method="post"
-    >
-      <input
-        type="text"
-        class="form-control"
-        name="module"
-        placeholder="search module"
-      />
-
-      <button type="submit" class="btn btn-success ml-2">search</button>
-    </form>
 
     <button
-      class="navbar-toggler navbar-toggler-right d-lg-none align-self-center"
+      class="navbar-toggler navbar-toggler-right d-sm-none align-self-center"
       type="button"
       data-toggle="offcanvas"
     >
-      <span class="mdi mdi-menu"></span>
+      <span class="mdi mdi-menu"> humberger </span>
     </button>
   </div>
 </nav>
