--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,18 +11,17 @@
           >
             <div class="row align-items-center">
               <div class="col-md-6">
-                <h1>Lorem, ipsum dolor sit amet consectetur adipisicing.</h1>
+                <h1>portfolio without limits.</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Officiis excepturi itaque voluptatibus quibusdam dolorum nulla
-                  delectus asperiores esse quasi voluptatem!
+                  Store, Access, or share your portfolio with our platform,
+                  Advanced security, user friendly and simplicity.
                 </p>
                 <a href="" class="btn btn-primary">get started</a>
               </div>
               <div class="col-md-6">
                 <img
                   style="width: 100%; max-height: 50vh; object-fit: cover"
-                  src="/uploads/images/8eae5049-79e0-41d9-86aa-ccdc22be991a -- IMG_0639.JPG"
+                  src="https://images.unsplash.com/photo-1503676382389-4809596d5290?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1476&q=80"
                   alt=""
                 />
               </div>
@@ -30,38 +29,44 @@
           </div>
           <h1 id="about" class="mt-4 mb-4 text-center">About us</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            officiis enim rerum doloribus quaerat ratione voluptates tenetur,
-            similique, temporibus deleniti expedita reiciendis! Sint obcaecati
-            eos itaque mollitia! Est, suscipit atque.
+            A good portfolio is more than a long list of good stocks and bonds.
+            it is a balanced whe , providing the owner with protection and
+            opportunities with respect to a wide range of contigencies.
           </p>
           <div style="gap: 2rem; justify-content: center" class="row mt-4">
             <div class="card col-md-3">
               <div class="card-body">
-                <div class="card-title">Lorem, ipsum dolor.</div>
+                <div class="avatar one"></div>
+                <div class="card-title">NTAKIRUTIMANA Pierre</div>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Quia, doloribus culpa? Consequuntur!
+                  Soft portfolio is a great way to demonstrate the competencies
+                  you would list on a resume or talk about in an interview.
                 </p>
                 <a href="#" class="btn btn-success">continue</a>
               </div>
             </div>
             <div class="card col-md-3">
               <div class="card-body">
-                <div class="card-title">Lorem, ipsum dolor.</div>
+                <div class="avatar two"></div>
+                <div class="card-title">HATEGEKIMANA Marie Faustine.</div>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Quia, doloribus culpa? Consequuntur!
+                  Soft portifolio provides an opportuity for a student to
+                  reflect on their learning, to self assess, and to formulate a
+                  deeper understanding of the concepts they are learning beyond
+                  a simple surface explanations.
                 </p>
                 <a href="#" class="btn btn-success">continue</a>
               </div>
             </div>
             <div class="card col-md-3">
               <div class="card-body">
-                <div class="card-title">Lorem, ipsum dolor.</div>
+                <div class="avatar three"></div>
+
+                <div class="card-title">MUGISHA Pacifique.</div>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Quia, doloribus culpa? Consequuntur!
+                  Soft portifolio allows both internal and external verifiers to
+                  verify and evaluate the portfolio of sudents with out the need
+                  of moving from one institution to another.
                 </p>
                 <a href="#" class="btn btn-success">continue</a>
               </div>
