--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,12 +51,11 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="d-flex justify-content-between">
-                        <h4 class="card-title mb-0">Flowchart</h4>
+                        <h2 class="mb-0">List of Modules</h2>
                         <a href="#"><small>Show All</small></a>
                       </div>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Est quod cupiditate esse fuga
+                        All your works in tis portfolio available on this list.
                       </p>
                       <div class="table-responsive">
                         <table class="table table-striped table-hover">
