--- a/public/assets/scss/shared/_reset.scss
+++ b/public/assets/scss/shared/_reset.scss
@@ -35,15 +35,15 @@ span {
   text-shadow: none;
 }
 
-[type=button]:focus,
+[type="button"]:focus,
 a:active,
 a:focus,
 a:visited,
 button::-moz-focus-inner,
-input[type=button]::-moz-focus-inner,
-input[type=file]>input[type=button]::-moz-focus-inner,
-input[type=reset]::-moz-focus-inner,
-input[type=submit]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
 select::-moz-focus-inner {
   outline: 0;
 }
@@ -124,10 +124,10 @@ button:visited {
   outline-offset: 0;
 }
 
-.dropdown-menu>li>a:active,
-.dropdown-menu>li>a:focus,
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:visited {
+.dropdown-menu > li > a:active,
+.dropdown-menu > li > a:focus,
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:visited {
   outline: 0 !important;
 }
 
@@ -135,4 +135,8 @@ a:focus,
 input:focus {
   border-color: transparent;
   outline: none;
+}
+
+h1 {
+  color: red !important;
 }
