--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -31,7 +31,19 @@
       type="button"
       data-toggle="offcanvas"
     >
-      <span class="mdi mdi-menu"> humberger </span>
+      <span class="mdi mdi-menu">
+        <button
+          class="navbar-toggler toggler-example"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent1"
+          aria-controls="navbarSupportedContent1"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span>
+        </button>
+      </span>
     </button>
   </div>
 </nav>
