--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,44 +6,40 @@
   >
     <a class="navbar-brand brand-logo" href="/"> SOFTPORT </a>
   </div>
-  <div class="navbar-menu-wrapper d-flex align-items-center">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item font-weight-semibold d-none d-sm-block">
+  <div class="navbar-menu-wrapper justify-content-end d-flex align-items-center">
+    <ul class="navbar-nav p-4 ml-auto justify-content-between d-flex ">
+      <li class="nav-item font-weight-semibold d-none  d-sm-block">
         <a href="/">home</a>
       </li>
-      <li class="nav-item font-weight-semibold d-none d-sm-block">
+      <li class="nav-item font-weight-semibold d-none  d-sm-block">
         <a href="#about">about</a>
       </li>
-      <li class="nav-item font-weight-semibold d-none d-sm-block">
+      <li class="nav-item font-weight-semibold d-none  d-sm-block">
         <a href="#contact">contacts</a>
       </li>
-
-      <li class="nav-item font-weight-semibold d-none d-sm-block">
-        <a href="/dashboard">dashboard</a>
-      </li>
-      <li class="nav-item font-weight-semibold d-none d-sm-block">
-        <a href="/profile">profile</a>
-      </li>
-    </ul>
-
-    <button
-      class="navbar-toggler navbar-toggler-right d-sm-none align-self-center"
-      type="button"
-      data-toggle="offcanvas"
+      <%if(locals.user){%>
+        
+        <li class="nav-item font-weight-semibold d-none  d-sm-block">
+          <a href="/dashboard">dashboard</a>
+        </li>
+        <li class="nav-item font-weight-semibold d-none  d-sm-block">
+          <a href="/profile">profile</a>
+        </li>
+      </ul>
+      <a href="/logout" class="btn btn-danger ml-2">logout</a>
+    <%} else{%>
+    <a href="/users/login" class="btn btn-success ml-2">login</a>
+  </ul>
+    <%}%>
+    <label
+    id="nav-mobile"
+    
+      class="ml-2 d-block nav-mobile   d-sm-none"
+     
     >
-      <span class="mdi mdi-menu">
-        <button
-          class="navbar-toggler toggler-example"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent1"
-          aria-controls="navbarSupportedContent1"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span>
-        </button>
-      </span>
-    </button>
+     <button style="padding-top: 2px;padding-bottom: 2px; pointer-events: none;" class="btn  btn-success d-block"></button>
+     <button style="padding-top: 2px;pointer-events: none;padding-bottom: 2px" class="btn btn-success d-block my-1"></button>
+     <button style="padding-top: 2px;pointer-events: none;padding-bottom: 2px" class="btn btn-success d-block"></button>
+    </label>
   </div>
 </nav>
