--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col-12 grid-margin">
     <div class="card">
@@ -137,6 +138,7 @@
         </form>
       </div>
     </div>
+    <%if(locals.user?.permission == "admin"){%>
     <div class="card mt-4">
       <div class="card-body">
         <h1 class="text-center text-primary">Add a module to be taught</h1>
@@ -215,5 +217,7 @@
         </form>
       </div>
     </div>
+    <%}%>
   </div>
 </div>
+
