--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-12 grid-margin">
     <div class="card">
@@ -52,12 +51,12 @@
                 <label class="col-sm-3 col-form-label">Gender</label>
                 <div class="col-sm-9">
                   <select name="sex" class="form-control">
-                    <% if(locals.selectedUser?.sex == "Male") {%>
-                    <option selected>Male</option>
-                    <option>Female</option>
+                    <% if(locals.selectedUser?.sex == "male") {%>
+                    <option value="male" selected>Male</option>
+                    <option value="Female">Female</option>
                     <%} else {%>
-                    <option selected>Female</option>
-                    <option>Male</option>
+                    <option value="Female" selected>Female</option>
+                    <option value="male">Male</option>
                     <%}%>
                   </select>
                 </div>
@@ -220,4 +219,3 @@
     <%}%>
   </div>
 </div>
-
