modified sex on profiles page

--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -53,9 +53,9 @@
                   <select name="sex" class="form-control">
                     <% if(locals.selectedUser?.sex == "male") {%>
                     <option value="male" selected>Male</option>
-                    <option value="Female">Female</option>
+                    <option value="female">Female</option>
                     <%} else {%>
-                    <option value="Female" selected>Female</option>
+                    <option value="female" selected>Female</option>
                     <option value="male">Male</option>
                     <%}%>
                   </select>
